crates/language-v2/tests/src/fail/p3_references/lexical_context_switch_optional/test.stderr
error: First field in a context switch cannot be optional.
  --> src/fail/p3_references/lexical_context_switch_optional/test.rs:21:62
   |
21 | ...                   entry = Optional(reference = Two, enabled = Always),
   |                                                    ^^^
